--- a/collect-module-dailyda-boot/pom.xml
+++ b/collect-module-dailyda-boot/pom.xml
@@ -150,8 +150,27 @@
             <groupId>com.tzj</groupId>
             <artifactId>collect-module-common</artifactId>
         </dependency>
-        
-        
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-test</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+        </dependency>
+
+
     </dependencies>
 
     <build>
