--- a/collect-module-flcx-boot/pom.xml
+++ b/collect-module-flcx-boot/pom.xml
@@ -120,6 +120,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <dependency>
+            <groupId>net.coobird</groupId>
+            <artifactId>thumbnailator</artifactId>
+            <version>0.4.11</version>
+        </dependency>
     </dependencies>
 
 
