--- a/collect-boot/pom.xml
+++ b/collect-boot/pom.xml
@@ -312,6 +312,18 @@
             <artifactId>ons-client</artifactId>
             <version>1.7.9.Final</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-test</artifactId>
+        </dependency>
     </dependencies>
     <properties>
         <timestamp>${maven.build.timestamp}</timestamp>
