--- a/collect-module-core/src/main/resources/application-init.yml
+++ b/collect-module-core/src/main/resources/application-init.yml
@@ -9,10 +9,10 @@ isOpenTransferThread: false
 #是否开启咸鱼订单消费
 isOpenXyConsumer: false
 #是否是正式支付通知
-notifyUrl: http://open.mayishoubei.com/notify/alipay
-#notifyUrl: http://shoubeics.mayishoubei.com/notify/alipay
+#notifyUrl: http://open.mayishoubei.com/notify/alipay
+notifyUrl: http://shoubeics.mayishoubei.com/notify/alipay
 #中转站Url
-stationUrl: http://api.station.mayishoubei.com/app/api
-#stationUrl: http://172.19.182.84:9001/admin/api
+#stationUrl: http://api.station.mayishoubei.com/app/api
+stationUrl: http://test.nstation.mayishoubei.com/admin/api
 #铸乾授权给2017022805948218这个账号的token
 authToken: 202004BBc31d3ee0ff544085bce8677abdeffX05
