--- a/collect-boot/src/main/resources/application-dynamicdb-pro.yml
+++ b/collect-boot/src/main/resources/application-dynamicdb-pro.yml
@@ -52,6 +52,6 @@ spring:
 wxNotifyUrl: https://open.mayishoubei.com/notify/wx
 
 alipay:
-  public-cert: /Users/xiangzhongguo/Downloads/证书/alipayCertPublicKey_RSA2.crt
-  root-cert: /Users/xiangzhongguo/Downloads/证书/alipayRootCert.crt
-  app-cert: /Users/xiangzhongguo/Downloads/证书/appCertPublicKey.crt
+  public-cert: /shoubei/alipayCert/alipayCertPublicKey_RSA2.crt
+  root-cert: /shoubei/alipayCert/alipayRootCert.crt
+  app-cert: /shoubei/alipayCert/appCertPublicKey.crt
