--- a/collect-module-dailyda-boot/src/main/resources/application-dynamicdb-pro.yml
+++ b/collect-module-dailyda-boot/src/main/resources/application-dynamicdb-pro.yml
@@ -49,8 +49,7 @@ spring:
           #driver-class-name: com.mysql.jdbc.Driver
 
 
-
 alipay:
-  public-cert: /Users/xiangzhongguo/Downloads/证书/alipayCertPublicKey_RSA2.crt
-  root-cert: /Users/xiangzhongguo/Downloads/证书/alipayRootCert.crt
-  app-cert: /Users/xiangzhongguo/Downloads/证书/appCertPublicKey.crt
+  public-cert: /daily/alipayCert/alipayCertPublicKey_RSA2.crt
+  root-cert: /daily/alipayCert/alipayRootCert.crt
+  app-cert: /daily/alipayCert/appCertPublicKey.crt
