--- a/collect-boot/src/main/resources/application-dev.yml
+++ b/collect-boot/src/main/resources/application-dev.yml
@@ -41,10 +41,9 @@ spring:
 wxNotifyUrl: http://shoubeics.mayishoubei.com/notify/wx
 
 alipay:
-  public-cert: /Users/xiangzhongguo/Downloads/证书/alipayCertPublicKey_RSA2.crt
-  root-cert: /Users/xiangzhongguo/Downloads/证书/alipayRootCert.crt
-  app-cert: /Users/xiangzhongguo/Downloads/证书/appCertPublicKey.crt
-
+  public-cert: /Users/xiangzhongguo/文档/cert/alipay/alipayCertPublicKey_RSA2.crt
+  root-cert: /Users/xiangzhongguo/文档/cert/alipay/alipayRootCert.crt
+  app-cert: /Users/xiangzhongguo/文档/cert/alipay/appCertPublicKey.crt
 
 
 
