--- a/pom.xml
+++ b/pom.xml
@@ -216,6 +216,12 @@
                 <artifactId>cos_api</artifactId>
                 <version>5.6.89</version>
             </dependency>
+            <dependency>
+                <groupId>com.sun.mail</groupId>
+                <artifactId>javax.mail</artifactId>
+                <version>1.6.2</version>
+            </dependency>
+
         </dependencies>
 
 
