--- a/skin-battle-boot/src/main/resources/application.yml
+++ b/skin-battle-boot/src/main/resources/application.yml
@@ -37,7 +37,18 @@ spring:
     time-zone: GMT+8
     date-format: yyyy-MM-dd HH:mm:ss
 
-
+  # 发送邮件配置
+  mail:
+    host: smtp.163.com # 配置 smtp 服务器地址
+    username: 18292835963@163.com # 配置邮箱用户名(你的邮箱地址)
+    password: WXNQTDMOWPWPLNWB # 配置申请到的授权码(刚让复制的授权码)
+    default-encoding: UTF-8 # 配置邮件编码
+    properties:
+      mail:
+        smtp:
+          socketFactoryClass: javax.net.ssl.SSLSocketFactory # 配饰 SSL 加密工厂
+        debug: true
+    from: 18292835963@163.com
 
 
 #mybatis
